--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="time">
             <h3>Choose Time: </h3>
             <label><input id="time-1" type="radio" name="time" value="three" checked>3 Min</label>
-            <label><input id="time-2" type="radio" name="time" value="five" checked>5 Min</label>
-            <label><input id="time-3" type="radio" name="time" value="ten" checked>10 Min</label>
+            <label><input id="time-2" type="radio" name="time" value="five" >5 Min</label>
+            <label><input id="time-3" type="radio" name="time" value="ten" >10 Min</label>
         </div>
         <div id="theme">
             <h3>Choose Theme: </h3>
