fixed bug of ending game after 1 correct turn

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body>
     <div id = "stats">
-        <p id ="timer">Timer</p>
-        <p id ="lives">Lives</p>
+        <p id ="timer"></p>
+        <p id ="lives"></p>
     </div>
     <div id ="game">
         <div id ="board"></div>
